[package]
name = "epifanio"
version = "0.1.0"
authors = ["avdb13 <avdb@keemail.me>"]
readme = "README.md"
repository = "https://github.com/avdb13/epifanio"
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
bendy = "0.3.3"
bytes = "1.5.0"
fxhash = "0.2.1"
hex = "0.4.3"
rand = "0.8.5"
thiserror = "1.0.56"
urlencoding = "2.1.3"
